--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Facebook: Warley Ison</p>
                     </div>
                     <div class="infoHeading">
-                    <h3><u>Enter Your Information (This feature does not work yet, please use the information above to get in touch. Thank you.</u></h3>
+                    <h3><u>Enter Your Information (This feature does not work yet, please use the information above to get in touch. Thank you.)</u></h3>
                     </div>
                     <div class="inputInfo">
                     <label for="first-name">First Name:</label>
